Fix missing z-index for header

--- a/app/app.css
+++ b/app/app.css
@@ -39,6 +39,7 @@ a:hover, a:focus {
 
 .header {
     display: block;
+    z-index: 100;
     position: fixed;
     top: 0;
     left: 0;
